 	cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
	project(cool_sorting CXX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g -lrt -fno-omit-frame-pointer -fsanitize=address")
	#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g -lrt")
	#set(LINKER_FLAGS "-fsanitize=address")
	#add_executable(fileread dioread.cpp)
	#add_executable(kvsrc kv_src2sink.cpp KVTuple.cpp KVSink.cpp KVSource.cpp KVGuide.cpp ConcurrentQueue.cpp StageTracker.cpp)

	add_executable(cq cq_test.cpp KVTuple.cpp KVSink.cpp KVSource.cpp StageTracker.cpp)
	#add_executable(kvsrc_noguider kv_src2sink.cpp KVTuple.cpp KVSink.cpp KVSource.cpp KVGuide.cpp ConcurrentQueue.cpp StageTracker.cpp)
	add_executable(kvtuple kv_move.cpp KVTuple.cpp)
	#add_executable(fileio file_io.cpp KVTuple.cpp KVFileIO.cpp)
	#add_executable(kvwrite kv_write.cpp KVFileIO.cpp KVTuple.cpp KVSink.cpp KVReader.cpp KVWriter.cpp KVGuide.cpp Socket.cpp ConcurrentQueue.cpp StageTracker.cpp)
#	add_executable(kvread kv_read.cpp KVFileIO.cpp KVTuple.cpp KVSink.cpp KVReader.cpp Socket.cpp ConcurrentQueue.cpp)
    #target_include_directories(kvwrite PRIVATE spdlog)
	#target_include_directories(fileio PRIVATE spdlog)
	#target_include_directories(fileio PRIVATE spdlog)
	#target_include_directories(fileread PRIVATE spdlog)

